# SignalForge

./: .env.example  .gitignore  .pr-body-m4.md  .pr-body-ref-only.md  .pr-body.md  .snyk  CHANGELOG.md  CLAUDE.md  CURSOR_PRD.md  Makefile  PR_DESCRIPTION.md  README.md  alembic.ini  direct_strategic_outreach_email.md  gunicorn.conf.py  low_pressure_intro_dm.md  low_pressure_intro_email.md  operator_profile_template.md  pyproject.toml  requirements-dev.txt  requirements.txt  soft_value_share_dm.md  soft_value_share_email.md  standard_outreach_dm.md  standard_outreach_email.md
.github/: PR_162_BODY.md  PR_174_PHASE3_BODY.md  PR_175_BODY.md  PR_287_M2_M3_M4_BODY.md  PR_287_M5_BODY.md  PR_BODY_CURRENT.md  PR_BODY_MAINTAINER_FIXES.md  PR_COMPANY_RESOLVER_NORMALIZATION_88.md  PR_COMPANY_RESOLVER_NORMALIZATION_BODY.md  PR_CORE_EVENT_TYPES_BODY.md  PR_CORE_TAXONOMY_DERIVER_285_BODY.md  PR_CREATE_INSTRUCTIONS.md  PR_CREATE_SIGNAL_SCORER.md  PR_CTO_NEED_SCORE_FIX_BODY.md  PR_DAILY_AGGREGATION_BODY.md  PR_DELAWARE_INCORPORATION_BODY.md  PR_DESCRIPTION_174.md  PR_EVIDENCE_ONLY_BODY.md  PR_GITHUB_REPO_ACTIVITY_BODY.md  PR_INGESTION_ADAPTERS_BODY.md  PR_M3_EVIDENCE_STORE_AND_MIGRATION_FIXES.md  PR_M4_EVIDENCE_REPOSITORY.md  PR_PHASE1_BODY.md  PR_PHASE3_MULTI_WORKSPACE_BODY.md  PR_PRODUCTHUNT_PHASE1_BODY.md  PR_SIGNAL_SCORER_PHASE2_BODY.md  PR_SINGLE_BODY.md
alembic/: env.py
app/: __init__.py  config.py  main.py
docs/: ADR-001-Introduce-Declarative-Signal-Pack-Architecture.md  Build Plan for v3  CORE_BAN_SIGNAL_IDS.md  CORE_VS_PACK_RESPONSIBILITIES.md  DEPLOYMENT_CORE_REQUIREMENTS.md  DEVELOPER_ONBOARDING.md  GLOSSARY.md  ISSUE_189_TEST_DELIVERABLES.md  ISSUE_LEGACY_PACK_PARITY_HARNESS.md  MINIMUM_THRESHOLD_ENFORCEMENT.md  MULTI_TENANT_BRIEFING_TODO.md  Outreach-Recommendation-Engine-ORE-design-spec.md  REVIEW_FIX_CORE_DERIVERS_LOADER.md  SignalForge Architecture Contract  TODO_TRACKING.md  (+44 more)
(+534 files in other folders)
